--- a/src/truckbot/CMakeLists.txt
+++ b/src/truckbot/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(Eigen3 3.3 REQUIRED)
 
 
 INCLUDE_DIRECTORIES(
