update encoder driver so that we pull wheelspeeds and put them out on /odom

--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -46,6 +46,8 @@ add_executable(encoder_driver
 target_link_libraries(encoder_driver lgpio)
 ament_target_dependencies(encoder_driver
   rclcpp
+  std_msgs
+  geometry_msgs
 )
 
 install(TARGETS
