--- a/src/control/CMakeLists.txt
+++ b/src/control/CMakeLists.txt
@@ -56,4 +56,13 @@ install(TARGETS
   encoder_driver
   DESTINATION lib/${PROJECT_NAME})
 
+
+install(DIRECTORY launch/
+  DESTINATION share/${PROJECT_NAME}/launch
+)
+
+install(DIRECTORY config/
+  DESTINATION share/${PROJECT_NAME}/config
+)
+
 ament_package()
